--- a/views/index.haml
+++ b/views/index.haml
@@ -1,1 +1,5 @@
-Your content here.
+%section.row
+  %article
+    %img.col_4{src: '/images/reingard_coffee.png'}
+    %p.col_6
+      this is some text
