--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,44 +1,47 @@
 !!!
 -# paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7 ]> <html class="no-js ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]>    <html class="no-js ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]>    <html class="no-js ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<!--[if lt IE 7 ]> <html class='no-js ie6' lang='en'> <![endif]-->
+<!--[if IE 7 ]>    <html class='no-js ie7' lang='en'> <![endif]-->
+<!--[if IE 8 ]>    <html class='no-js ie8' lang='en'> <![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!--> <html class='no-js' lang='en'> <!--<![endif]-->
 %head
-  %meta(charset="utf-8")
+  %meta(charset='utf-8')
 
   -# Always force latest IE rendering engine (even in intranet) & Chrome Frame
   -# Remove this if you use the .htaccess
-  %meta(content="IE=edge,chrome=1" http-equiv="X-UA-Compatible")
+  %meta(content='IE=edge,chrome=1' http-equiv='X-UA-Compatible')
 
-  %title Sinatra with Html5-boilerplate
-  %meta(name="description" content="")
-  %meta(name="author" content="")
+  %title In memory of Reingard Riepenhausen
+  %meta(name='description' content='')
+  %meta(name='author' content='')
 
   -# Mobile viewport optimized: j.mp/bplateviewport
-  %meta(name="viewport" content="width=device-width, initial-scale=1.0")
+  %meta(name='viewport' content='width=device-width, initial-scale=1.0')
 
   -# Place favicon.ico & apple-touch-icon.png in the root of your domain and delete these references
-  %link(rel="shortcut icon" href="/favicon.ico")
-  %link(rel="apple-touch-icon" href="/apple-touch-icon.png")
+  %link(rel='shortcut icon' href='/favicon.ico')
+  %link(rel='apple-touch-icon' href='/apple-touch-icon.png')
 
-  -# CSS: implied media="all"
-  %link(rel="stylesheet" href="stylesheets/style.css?v=2")
+  -# CSS: implied media='all'
+  %link(rel='stylesheet' href='stylesheets/style.css?v=2')
+  %link(rel='stylesheet' href='css/build.css')
+  %link(rel='stylesheet' href='css/columnal.css')
+  %link(rel='stylesheet' href='http://fonts.googleapis.com/css?family=Philosopher|Chivo:900|Unna|Terminal+Dosis')
 
   -# Uncomment if you are specifically targeting less enabled mobile browsers
-  -# <link rel="stylesheet" media="handheld" href="stylesheets/handheld.css?v=2">
+  -# <link rel='stylesheet' media='handheld' href='stylesheets/handheld.css?v=2'>
 
   -# All JavaScript at the bottom, except for Modernizr which enables HTML5 elements & feature detects
-  %script(type="text/javascript" src="javascripts/libs/modernizr-1.7.min.js")
+  %script(type='text/javascript' src='javascripts/libs/modernizr-1.7.min.js')
 
 %body
-  %a.visuallyhidden.focusable(href="#main") Skip to main content link
+  %a.visuallyhidden.focusable(href='#main') Skip to main content link
 
   #container
-    %header
+    %header.row
       = partial :'partials/header'
     
-    #main(role="main")
+    %section#main(role="main")
       = yield
     
     %footer
