--- a/views/partials/_header.haml
+++ b/views/partials/_header.haml
@@ -1,4 +1,4 @@
-%h1.col_7 In memory of Reingard Riepenhausen
-%span.col_4
-  1941 - 2010
-
+.col_10
+  %h1 In memory of Reingard Riepenhausen
+  %span
+    1941 - 2010
