--- a/views/stylesheets/style.scss
+++ b/views/stylesheets/style.scss
@@ -259,6 +259,18 @@ a:hover { color: #036; }
   h2, h3{ page-break-after: avoid; }
 }
 
+body {
+  background: black;
+}
 header {
-  h1 { font-family: 'Chivo', sans-serif; }
+  h1 { 
+    font-family: 'Chivo', sans-serif;
+    margin-bottom: 0em;
+  }
+  span {
+    margin-left: 34em;
+  }
+}
+.welcome {
+  padding-top: 4em;
 }
