--- a/views/index.haml
+++ b/views/index.haml
@@ -1,5 +1,29 @@
 %section.welcome.row
   %article
     %img.col_4{src: '/images/reingard_coffee.png'}
-    %p.col_6
-      this is some text
+    %blockquote.col_6
+      %p 
+        A tree is dying in my garden.
+        %br
+        You see it, but you also see other trees that are still vigorous and joyfull.
+      %p
+        And I am thankful.
+      %p
+        I know the tree is dying in my garden,
+        %br
+        but I do not see it as the whole garden.
+      %p
+        And I need you to remind me of that.
+      %p
+        I am told to take care of the garden left to me by my ancestors.
+        %br
+        A garden always has beautiful trees and others that are not so healthy.
+        %br
+        That is the reason why we have to take good care of it.
+      %p
+        You are my garden and I know that I should practice as a gardener.
+      %p
+        I have seen an old, untended garden, where the cherry and peach trees still
+        bloom wonderfully and always in time.
+    %span
+      Homage to Reingard by Pamela Cooper
