--- a/views/gallery_layout.haml
+++ b/views/gallery_layout.haml
@@ -12,8 +12,8 @@
   %meta(content='IE=edge,chrome=1' http-equiv='X-UA-Compatible')
 
   %title In memory of Reingard Riepenhausen
-  %meta(name='description' content='Webpage in memory of Reingard Riepenhausen')
-  %meta(name='author' content='Enrique Comba Riepenhausen')
+  %meta(name='description' content='')
+  %meta(name='author' content='')
 
   -# Mobile viewport optimized: j.mp/bplateviewport
   %meta(name='viewport' content='width=device-width, initial-scale=1.0')
@@ -23,9 +23,7 @@
   %link(rel='apple-touch-icon' href='/apple-touch-icon.png')
 
   -# CSS: implied media='all'
-  %link(rel='stylesheet' href='stylesheets/style.css?v=2')
-  %link(rel='stylesheet' href='css/build.css')
-  %link(rel='stylesheet' href='css/columnal.css')
+  %link(rel='stylesheet' href='stylesheets/gallery.css')
   %link(rel='stylesheet' href='http://fonts.googleapis.com/css?family=Philosopher|Chivo:900|Unna|Terminal+Dosis')
 
   -# Uncomment if you are specifically targeting less enabled mobile browsers
@@ -35,21 +33,9 @@
   %script(type='text/javascript' src='javascripts/libs/modernizr-1.7.min.js')
 
 %body
-  %a.visuallyhidden.focusable(href='#main') Skip to main content link
-
-  #container
-    %header.row
-      = partial :'partials/header'
-    
-    %section#main(role="main")
-      = yield
-    
-    %footer
-      = partial :'partials/footer'
 
   -# JavaScript at the bottom for fast page loading
   = partial :'partials/javascripts'
   
   -# Google analytics snippet
   = partial :'partials/analytics'
-
