added author of the poem

--- a/views/index.haml
+++ b/views/index.haml
@@ -25,5 +25,7 @@
       %p
         I have seen an old, untended garden, where the cherry and peach trees still
         bloom wonderfully and always in time.
+      %small
+        \~ Thich Nhat Hanh
     %span
       Homage to Reingard by Pamela Cooper
