--- a/views/stylesheets/style.scss
+++ b/views/stylesheets/style.scss
@@ -234,6 +234,13 @@ header {
   span {
     font-size: 0.8em;
   }
+
+  blockquote {
+    small {
+      float: right;
+      font-size: 0.7em;
+    }
+  }
 }
 
 /**
